00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app-namespace
  labels:
    name: sample-app-namespace
